Curves panel, zooming out a lot crashes Blender. #40895

Closed
opened 2014-06-30 20:32:15 +02:00 by Mario Mey · 5 comments

System Information
nVidia GT 620
AMD A4-4000
Ubuntu 14.04

Blender Version
2.71
Short description of error
Blender crashs doing zoom out. Look at the video.

Exact steps for others to reproduce the error
Open the file, in Curves panel, zoom out with Ctrl-MB to bottom left A LOT... until it crashs.

Sometimes, I zoom out and I "spend long" ("me paso de largo") by accident, and Blender doesn't support it.

blender-zoom-out-crash.mp4
54-zoom-out-crash.blend

**System Information** nVidia GT 620 AMD A4-4000 Ubuntu 14.04 **Blender Version** 2.71 **Short description of error** Blender crashs doing zoom out. Look at the video. **Exact steps for others to reproduce the error** Open the file, in Curves panel, zoom out with Ctrl-MB to bottom left A LOT... until it crashs. Sometimes, I zoom out and I "spend long" ("me paso de largo") by accident, and Blender doesn't support it. [blender-zoom-out-crash.mp4](https://archive.blender.org/developer/F96133/blender-zoom-out-crash.mp4) [54-zoom-out-crash.blend](https://archive.blender.org/developer/F96134/54-zoom-out-crash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile

This issue was referenced by f004893e49

This issue was referenced by f004893e492cbe29c308c726ab06ae7342d7c6c7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f004893e49.

Closed by commit f004893e49.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40895
No description provided.