Fix T40895: Curves panel, zooming out a lot crashes Blender